--- a/src/Screens/Gallery.css
+++ b/src/Screens/Gallery.css
@@ -1,19 +1,33 @@
-
 .imagelist {
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically if necessary */
-    width: 100%; /* Ensure it takes full width of its parent */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: 80vh;
-    padding: 20px; /* Optional: Adds some space inside the container */
-  }
+    padding: 20px;
+    padding-bottom: 50px; /* Adds space below the container */
+}
 
-  .top {
+
+.top {
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto; /* Changed to auto to accommodate padding and content size */
+    padding: 20px; /* Uniform padding */
+    max-width: 80vw;
+    margin: auto; /* Centers the .top div */
+}
+
+.top h1 {
+    margin-top: 30px; /* Adds space above h1 */
+}
+
+.content {
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically if necessary */
-    width: 100%; /* Ensure it takes full width of its parent */
-    height: 10vh;
-    padding-top: 50px; /* Optional: Adds some space inside the container */
-  }
-  
+    flex-direction: column;
+    align-items: stretch;
+    height: 90vh; /* Adjusted for total height including .top and .imagelist */
+    
+}
