--- a/src/Screens/Gallery.css
+++ b/src/Screens/Gallery.css
@@ -4,7 +4,8 @@
     align-items: center;
     width: 100%;
     height: 80vh;
-    padding: 20px;
+    padding: 80px;
+    padding-top: 200px;
     padding-bottom: 50px; /* Adds space below the container */
 }
 
@@ -26,7 +27,7 @@
 
 .content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: stretch;
     height: 90vh; /* Adjusted for total height including .top and .imagelist */
     
