--- a/src/Screens/HomePage.css
+++ b/src/Screens/HomePage.css
@@ -2,4 +2,37 @@
     width: 80%;
     height: 500px;
     margin: auto; 
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.categories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+    padding: 20px;
+    margin-bottom: 80px;
+}
+
+.aboutus {
+    margin-top: 20px;
+    padding: 20px;
+    margin-bottom: 100px;
+}
+.aboutus-title{
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+
+}
+.aboutus-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    max-width: 75%;
+    margin: auto;
+    line-height: 1.8;
 }
